--- a/src/NLog.LumberjackTarget/NLog.LumberjackTarget.csproj
+++ b/src/NLog.LumberjackTarget/NLog.LumberjackTarget.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NLog.Targets.Lumberjack</RootNamespace>
-    <AssemblyName>NLog.Targets.Lumberjack</AssemblyName>
+    <AssemblyName>NLog.LumberjackTarget</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
