--- a/src/NLog.LumberjackTarget/NLog.LumberjackTarget.csproj
+++ b/src/NLog.LumberjackTarget/NLog.LumberjackTarget.csproj
@@ -54,6 +54,7 @@
     <Compile Include="LumberjackProtocol.cs" />
     <Compile Include="LumberjackTarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transport.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
