--- a/src/NLog.LumberjackTarget/NLog.LumberjackTarget.nuspec
+++ b/src/NLog.LumberjackTarget/NLog.LumberjackTarget.nuspec
@@ -14,6 +14,7 @@
     <tags>nlog lumberjack logstash log logging</tags>
   </metadata>
   <files>
-    <file src="bin\Release\*.*" target="lib" />
+    <file src="bin\Release\*.*" target="deploy" />
+    <file src="bin\Release\*.*" exclude="*.pdb" />
   </files>
 </package>
