--- a/src/NLog.LumberjackTarget/NLog.LumberjackTarget.csproj
+++ b/src/NLog.LumberjackTarget/NLog.LumberjackTarget.csproj
@@ -49,19 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builders\LumberjackAlertMessageBuilder.cs" />
-    <Compile Include="Builders\LumberjackLogMessageBuilder.cs" />
-    <Compile Include="Builders\LumberjackBaseMessageBuilder.cs" />
-    <Compile Include="Builders\LumberjackMetricMessageBuilder.cs" />
-    <Compile Include="Loggers\ConsoleLogger.cs" />
-    <Compile Include="Loggers\NLogLogger.cs" />
-    <Compile Include="Settings\ComponentSettings.cs" />
-    <Compile Include="Loggers\IMessageLogger.cs" />
+    <Compile Include="LoggerExtensions.cs" />
     <Compile Include="LumberjackLogMessage.cs" />
     <Compile Include="LumberjackProtocol.cs" />
     <Compile Include="LumberjackTarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings\IComponentSettings.cs" />
     <Compile Include="Transport.cs" />
   </ItemGroup>
   <ItemGroup>
