--- a/src/NLog.LumberjackTarget/NLog.LumberjackTarget.csproj
+++ b/src/NLog.LumberjackTarget/NLog.LumberjackTarget.csproj
@@ -53,15 +53,13 @@
     <Compile Include="Builders\LumberjackLogMessageBuilder.cs" />
     <Compile Include="Builders\LumberjackBaseMessageBuilder.cs" />
     <Compile Include="Builders\LumberjackMetricMessageBuilder.cs" />
-    <Compile Include="Loggers\ConsoleLogger.cs" />
     <Compile Include="Loggers\NLogLogger.cs" />
-    <Compile Include="Settings\ComponentSettings.cs" />
-    <Compile Include="Loggers\IMessageLogger.cs" />
+    <Compile Include="Builders\IMessageLogger.cs" />
     <Compile Include="LumberjackLogMessage.cs" />
     <Compile Include="LumberjackProtocol.cs" />
     <Compile Include="LumberjackTarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings\IComponentSettings.cs" />
+    <Compile Include="Builders\IComponentSettings.cs" />
     <Compile Include="Transport.cs" />
   </ItemGroup>
   <ItemGroup>
