--- a/src/NLog.Targets.Lumberjack.TestConsole/NLog.Targets.Lumberjack.TestConsole.csproj
+++ b/src/NLog.Targets.Lumberjack.TestConsole/NLog.Targets.Lumberjack.TestConsole.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComponentSettings.cs" />
+    <Compile Include="ConsoleLogger.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
