--- a/src/NLog.Targets.Lumberjack.TestConsole/App.config
+++ b/src/NLog.Targets.Lumberjack.TestConsole/App.config
@@ -13,7 +13,7 @@
       <add assembly="NLog.Targets.Lumberjack"/>
     </extensions>
 
-    <targets async="true">
+    <targets>
       <target name="MyLogstashServer" xsi:type="Lumberjack" host="metrics.zheka.by" Thumbprint="B834111028618203E50C24E29F5AE39CD8793D3F"  />
     </targets>
 
