--- a/src/NLog.Logstash/NLog.Logstash.csproj
+++ b/src/NLog.Logstash/NLog.Logstash.csproj
@@ -7,9 +7,9 @@
     <ProjectGuid>{EE2FF7F6-7073-43FD-B4FD-C05DEF0EFE63}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NLog.Targets.Lumberjack</RootNamespace>
-    <AssemblyName>NLog.LumberjackTarget</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>NLog.Logstash</RootNamespace>
+    <AssemblyName>NLog.Logstash</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -35,8 +35,8 @@
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.0.1\lib\net45\NLog.dll</HintPath>
+    <Reference Include="NLog, Version=4.1.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.1.0\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -52,10 +52,15 @@
     <Compile Include="LoggerExtensions.cs" />
     <Compile Include="LumberjackMessage.cs" />
     <Compile Include="LumberjackMessageBuilder.cs" />
-    <Compile Include="LumberjackProtocol.cs" />
+    <Compile Include="Lumberjack\LumberjackProtocol.cs" />
     <Compile Include="LumberjackTarget.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transport.cs" />
+    <Compile Include="Lumberjack\LumberjackTransport.cs" />
+    <Compile Include="Tcp\TcpProtocol.cs" />
+    <Compile Include="TransportBase.cs" />
+    <Compile Include="TargetBase.cs" />
+    <Compile Include="TcpTarget.cs" />
+    <Compile Include="Tcp\TcpTransport.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
