tcp protocol impl.

--- a/src/NLog.Targets.Lumberjack.TestConsole/App.config
+++ b/src/NLog.Targets.Lumberjack.TestConsole/App.config
@@ -13,12 +13,14 @@
       <add assembly="NLog.Targets.Lumberjack"/>
     </extensions>
 
-    <targets>
+    <targets async="false">
       <target name="MyLogstashServer" xsi:type="Lumberjack" host="metrics.zheka.by" Thumbprint="B834111028618203E50C24E29F5AE39CD8793D3F"/>
+      <target name="MyLogstashServer2" xsi:type="LogstashTcp" host="192.168.7.2" Port="5001" />
     </targets>
 
     <rules>
-      <logger name="*" minlevel="Trace" writeTo="MyLogstashServer"/>
+      <!--<logger name="*" minlevel="Trace" writeTo="MyLogstashServer"/>-->
+      <logger name="*" minlevel="Trace" writeTo="MyLogstashServer2"/>
     </rules>
     
   </nlog>
